--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -15,7 +15,7 @@ ul {
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "silom", sans-serif;
   background-color: var(--primary-bg-color);
   color: var(--text-color);
   line-height: 1.6;
